@@ -10,6 +10,8 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 
+2017-10-10 DariusIII
+	Fix: Tmdb error on ajax_mymovies.php (Fixes issue #2526)
 2017-10-09 niel
 	Fix: Add missing use statement to fix TMDb not found error. Closes issue 2526.
 2017-10-02 niel
